@@ -249,6 +249,8 @@ enum FrameBorderStyle {
 
 - (int)getObjectCacheSize;
 
+- (BOOL)frameRequiredForMIMEType: (NSString*)mimeType;
+
 - (void)loadEmptyDocumentSynchronously;
 
 - (NSString *)MIMETypeForPath:(NSString *)path;
